fixed manufacturesrs scrollbar

--- a/src/components/ui/HomePage/Manufacturers/Manufacturers.css
+++ b/src/components/ui/HomePage/Manufacturers/Manufacturers.css
@@ -15,3 +15,17 @@
     overflow-x: hidden; /* Ensure no overflow or scrollbars */
     position: relative; /* Ensure correct positioning */
 }
+
+/* Description Row */
+.manufacturers-description-row {
+    text-align: center;
+    line-height: 1.5;
+    padding: 8px;
+    font-size: var(--fs-md);
+}
+
+@media (max-width: 768px) {
+    .manufacturers-description-row {
+        font-size: var(--fs-sm);
+    }
+}
